force-app/main/default/objects/Artisan__c/Artisan__c.object-meta.xml
<CustomObject>
    <description>Artisan to create product colors</description>
    <label>Artisan</label>
    <nameField>
        <displayFormat>RSART-{00000}</displayFormat>
        <label>Artisan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Artisans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>