force-app/main/default/objects/Artisan__c/fields/Artist_Name__c.field-meta.xml
<CustomField>
    <fullName>Artist_Name__c</fullName>
    <description>Name of Artisan</description>
    <label>Artist Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>