force-app/main/default/objects/Artisan__c/fields/ColorFor__c.field-meta.xml
<CustomField>
    <fullName>ColorFor__c</fullName>
    <description>Color that this artisan is responsible for</description>
    <label>ColorFor</label>
    <length>48</length>
    <required>true</required>
    <type>Text</type>
</CustomField>