force-app/main/default/objects/Artisan__c/fields/CurrentlyAssigned__c.field-meta.xml
<CustomField>
    <fullName>CurrentlyAssigned__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of jobs this account is currently assigned to</description>
    <label>CurrentlyAssigned</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>